# pattern-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.dev  Makefile  README.md  dev-requirements.txt  manage.py  pyproject.toml  register-service-on-aap-gateway.md  requirements.txt  sonar-project.properties  tox.ini
.config/: constraints.txt
.github/workflows/: checks.yml  linters.yml  sonar_checks.yml  tests.yml  units.yml
core/: admin.py  api_examples.py  apps.py  authentication.py  controller_client.py  models.py  serializers.py  services.py  task_runner.py  tasks.py  urls.py  utils.py  views.py
core/management/commands/: demo_task.py  run_dispatcher.py  worker.py
core/migrations/: 0001_initial.py  0002_pattern_created_pattern_created_by_pattern_modified_and_more.py  0003_task.py  0004_task_updated_at_alter_task_status.py  0005_remove_task_updated_at.py  0005_remove_task_updated_at_alter_task_status.py  0006_task_updated_at.py
core/tasks/: demo.py  hazmat.py
core/tests/: conftest.py  test_api_v1.py  test_controller_client.py  test_controller_helpers.py  test_models.py  test_serializers.py  test_services.py  test_tasks.py  test_views.py
core/utils/: __init__.py  http_helpers.py
core/utils/controller/: __init__.py  client.py  helpers.py
docs/: examples.py
pattern_service/: asgi.py  settings.py  urls.py  wsgi.py
pattern_service/settings/: __init__.py  aap.py  defaults.py  development_defaults.py  dispatcher.py  testing_defaults.py
requirements/: requirements-all.txt  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt
specifications/: openapi.json  pattern_specification.json  pattern_specification.md
specifications/pattern-schema/: pattern-schema-dev.json
specifications/pattern-specification/: pattern-specification-dev.md
tools/docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml
tools/podman/: Containerfile.dev  README.md  compose-test.yaml  compose.yaml
