[project]
name = "pattern_service"
version = "0.1.0"
description = "Pattern Service Django project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dispatcherd[pg_notify]==v2025.05.19"
    "django-ansible-base==2025.5.8"
]

[tool.black]
line-length = 160
fast = true
skip-string-normalization = true

[tool.isort]
profile = "black"
force_single_line = true
line_length = 120

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pattern_service"]

[[tool.mypy.overrides]]
module = ["ansible_base.*", "rest_framework.*"]
ignore_missing_imports = true
